--- a/WebApp/Views/Shared/DoctorAlertView.cshtml
+++ b/WebApp/Views/Shared/DoctorAlertView.cshtml
@@ -31,6 +31,14 @@
                         </span>
                     </a>
                 </li>
+                <li>
+                    <div class="text-center">
+                        <a href="@Url.Action("Index", "DoctorAlert")">
+                            <strong>See All Alerts</strong>
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </li>
     }
