--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -20,7 +20,7 @@ else
                 <th class="column-title" style="text-align:center">Doctor's Name </th>
                 <th class="column-title" style="text-align:center">Appointment Time</th>
                 <th class="column-title" style="text-align:center">Reason of Visit </th>
-                <th class="column-title" style="text-align:center">ChiefComplaint</th>
+                <th class="column-title" style="text-align:center">Chief Complaint</th>
                 <th class="column-title" style="text-align:center">Action</th>
             </tr>
         </thead>
@@ -40,7 +40,13 @@ else
 
                     <tr class="even pointer">
                         <td style="text-align:center">@item.DoctorName</td>
-                        <td style="text-align:center">@item.appDate @item.appTime</td>
+                        <td style="text-align:center">
+                            <span class="replacer" id="@("replacep" + j)"></span>
+                            <script type="text/javascript">
+                        var fdate = showLocal('@item.utcappDate');
+                            $("#replacep"+@j).html(fdate);
+                            </script>
+                        </td>
                         <td style="text-align:center">@item.rov</td>
                         <td style="text-align:center">@item.chiefComplaints</td>
                         <!-- <td><button class="btn btn-primary btn-sm m-b-0 " type="submit">View</button></td> -->
