--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -21,7 +21,7 @@
     var formattedDate = "";
     var formattedTime = "";
     var showTimings = "";
-
+    var utcdate = "";
     appDate = Model.appDate.ToString();
     appTime = Model.appTime.ToString();
 
@@ -79,7 +79,19 @@
     if (specialities == "") { specialities = "N.A"; }
 
 
+    if (appDate != "" && appTime != "")
+    {
+        DateTime utcappdate = DateTime.Parse(appDate);
+       
+        TimeSpan utcapptimings = TimeSpan.Parse(appTime);
+        DateTime result = Convert.ToDateTime(utcappdate.ToString("yyyy-MM-dd")) + utcapptimings;
+        utcdate = string.Format("{0:yyyy-MM-dd HH:mm:ss}", result);
 
+        //formattedDate = string.Format("{0:dd MMM, yyyy}", date);
+
+        formattedDate = string.Format("{0:dd MMM, yyyy hh:mm tt}", utcdate);
+
+    }
     if (appDate != "")
     {
         DateTime date = DateTime.Parse(appDate);
@@ -146,7 +158,12 @@
         </div>
 
          <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 36px -15px 20px; padding: 10px 21px 0; ">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@formattedDate-@formattedTime</b></p>
+            <p style="color: #375781;"><span style="width: 150px; float: left;">App. Date/Time</span><b><span id="replaceme"></span>
+                <script type="text/javascript">
+                    var fdate = showLocal('@utcdate');
+                    $("#replaceme").html(fdate);
+                </script>
+                </b></p>
         </div>
         @*<div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px 20px; padding: 10px 21px 0; float: left;">
         <p style="color: #375781;"><span style="width: 150px; float: left;">Reason of Visit</span><b>@rov</b></p>
