--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="@Url.Content("~/Scripts/Formatdate.js")"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
