--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -894,8 +894,18 @@
             contentType: "application/json",
             dataType: 'json',
             success: function (response) {
-
+                
+                if(response.Message!=undefined)
+                {
+                    new PNotify({
+                        title: 'Error',
+                        text: response.Message.ReasonPhrase,
+                        type: 'error',
+                        styling: 'bootstrap3'
+                    });
+                }
                 if (response.Success == true) {
+                    
                     if (response.ApiResultModel.message != "") {
                         new PNotify({
                             title: 'Error',
