Live and schedule call issues fixed

--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -81,8 +81,9 @@ else
     var flag = 0;
     var _objConsult = {};
 
-    function createConsult(doctorID,patientID,appID)
+    function createConsultFromDoctor(doctorID,patientID,appID)
     {
+        debugger;
         _objConsult["doctorId"] = doctorID;
         _objConsult["patientId"] = patientID;
         _objConsult["appID"] = appID;
@@ -114,7 +115,8 @@ else
                             type: 'info',addclass: 'dark',
                             styling: 'bootstrap3'
                         });
-                        makeCallToPatient(patientID, appID,response.ApiResultModel.ID);
+                        var _consultID=response.ApiResultModel.ID;
+                        makeCallToPatient(patientID, appID,_consultID);
                                           
                     }
                 }
@@ -159,10 +161,10 @@ else
         console.log(moment(then,"YYYY/MM/DD HH:mm:ss"));
         var duration = moment.duration(moment(then,"YYYY/MM/DD HH:mm:ss").diff(moment(now,"YYYY/MM/DD HH:mm:ss")));
 
-        if((288000>duration._milliseconds)&&(duration._milliseconds>-842000))
+        if((288000>duration._milliseconds)&&(duration._milliseconds>-842000)) //Check for 5 min before and 15 min after
         {
-            //alert("Call...");
-            createConsult(doctorID,patientID,appID);
+            alert("Call...");
+            createConsultFromDoctor(doctorID,patientID,appID);
         } 
         else
         {
