--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -581,12 +581,19 @@
                     window.location.href = request.response.redirectUrl;
             }
         });
+        function errorRes(data) {
+            new PNotify({
+                title: 'Error',
+                text: data.Message,
+                type: 'error',
+                styling: 'bootstrap3'
+            });
+        }
 
         $('#menu_toggle').click(function () { if (document.body.className == "nav-md footer_fixed") { ($("body").attr("class", "nav-sm footer_fixed")); $('.fa-angle-down').show(); } else { $("body").attr("class", "nav-md footer_fixed"); } });
         $('.menu_section li').hover(
        function () { $(this).addClass('current-page') },
-       function () { $(this).removeClass('current-page') }
-)
+       function () { $(this).removeClass('current-page') })
     </script>
 
 
